--- a/tutorials/05-dom/css/style.css
+++ b/tutorials/05-dom/css/style.css
@@ -7,41 +7,48 @@ https://www.paulirish.com/2012/box-sizing-border-box-ftw/
 
 
 html {
-   box-sizing: border-box;
-   font-size: 62.5%;
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
 
 
 *,
 *:before,
 *:after {
-   box-sizing: inherit;
-   margin: 0;
-   padding: 0;
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
 }
 
 
 html,
 body {
-   height: 100%;
+    height: 100%;
 }
 
 
 body {
     font-size: 1.6rem;
-   line-height: 1.6;
+    /* font-size 1.6rem is now the same as 16px */
+    line-height: 1.6;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 header {
     padding: 50px;
-    background-color: rgb(233, 194, 86);
+    background-color: rgb(137, 202, 91);
     text-align: center;
 }
+
 main {
     max-width: 800px;
     margin: 50px auto;
-
 }
+
 p {
     margin-top: 20px;
+}
+
+.text-block {
+ 
 }
